[package]
name = "universal-hot-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uhk-input = { path = "uhk-input" }
uhk-scripting = { path = "uhk-scripting" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
anyhow = "1.0.65"