[package]
name = "uhk-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.65"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
phf = { version = "0.11.1", features = ["macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22.3"
core-foundation = "0.9.3"

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.4.3"
x11 = { version = "2.20.0", features = ["xlib", "xtest"] }