[package]
name = "uhk-scripting"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
uhk-input = { path = "../uhk-input" }
anyhow = "1.0.65"
pest = "2.4.0"
pest_derive = "2.4.0"


[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
