[package]
name = "uhk_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.65"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.4.3"
